- add eclipse formatter configuration - apply format